--- a/api-reference/mocking-framework/mock-objects-and-methods.mdx
+++ b/api-reference/mocking-framework/mock-objects-and-methods.mdx
@@ -1,315 +1,333 @@
 ---
-title: "Mock Objects and Method Expectations"
-description: "Discover how to declare mock classes and methods using MOCK_METHOD macros. Learn to set up ON_CALL and EXPECT_CALL statements, chaining expectations, and managing default return values and behaviors."
+title: "Defining Mock Objects and Methods"
+description: "Step-by-step reference for declaring mock classes and methods using GoogleMock. Covers the key macros (MOCK_METHOD, etc.), supported method signatures, and usage scenarios for faking interfaces and simulating object behavior in tests."
 ---
 
-# Mock Objects and Method Expectations
+# Defining Mock Objects and Methods
 
-This chapter covers how to define mock classes and their methods with GoogleMock, using the `MOCK_METHOD` macro family. You will learn how to configure method behaviors and expectations with `ON_CALL` and `EXPECT_CALL` statements, how to chain multiple expectations, and manage default return values and behaviors effectively.
+This reference provides a comprehensive, step-by-step guide for declaring mock classes and methods using GoogleMock. It covers the key macros like `MOCK_METHOD`, discusses supported method signatures, and explains usage scenarios for faking interfaces and simulating object behavior in tests.
 
 ---
 
-## Defining Mock Classes and Methods
+## 1. Defining Mock Classes
 
-To begin mocking in GoogleMock, you create a mock class that inherits from the interface or base class you want to mock. For each virtual method that you want to mock, you use the `MOCK_METHOD` macro, which generates the mocked method for you.
+To create a mock class, derive from the interface or base class you want to mock and declare mock methods using the `MOCK_METHOD` macro. Each mocked method replaces a virtual method and simulates its behavior.
 
-### Basic Usage of `MOCK_METHOD`
+### MOCK_METHOD Macro
 
 ```cpp
+MOCK_METHOD(return_type, method_name, (args...), (qualifiers...));
+```
+
+- `return_type`: The return type of the method being mocked.
+- `method_name`: The name of the method.
+- `args...`: The method arguments enclosed in parentheses.
+- `qualifiers...` (optional): Method qualifiers such as `const`, `override`, `noexcept`, calling convention (e.g., `Calltype(STDMETHODCALLTYPE)`), or reference qualifiers (e.g., `ref(&)`, `ref(&&)`).
+
+**Important:** `MOCK_METHOD` must be declared in the `public:` section of the mock class, even if the overridden method is protected or private.
+
+#### Handling Commas in Types
+
+Since commas inside template parameters can confuse the macro parser, use either:
+
+- Parentheses around the entire return or argument type:
+  ```cpp
+  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
+  MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
+  ```
+
+- Type aliases:
+  ```cpp
+  using BoolAndInt = std::pair<bool, int>;
+  MOCK_METHOD(BoolAndInt, GetPair, ());
+  using MapIntDouble = std::map<int, double>;
+  MOCK_METHOD(bool, CheckMap, (MapIntDouble, bool));
+  ```
+
+### Example
+
+```cpp
+#include <gmock/gmock.h>
+
+class Foo {
+ public:
+  virtual ~Foo();
+  virtual int GetSize() const = 0;
+  virtual string Describe(const char* name) = 0;
+  virtual string Describe(int type) = 0;
+  virtual bool Process(Bar elem, int count) = 0;
+};
+
 class MockFoo : public Foo {
  public:
-  MOCK_METHOD(void, DoThis, (), (override));
-  MOCK_METHOD(int, DoThat, (bool flag), (override));
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(string, Describe, (const char* name), (override));
+  MOCK_METHOD(string, Describe, (int type), (override));
+  MOCK_METHOD(bool, Process, (Bar elem, int count), (override));
 };
 ```
 
-- The first argument to `MOCK_METHOD` is the return type.
-- The second is the method name.
-- The third is a tuple with the method's parameter types.
-- The optional fourth argument is a list of qualifiers, such as `const` and `override`.
+### Mocking Class Templates
 
-If mocking a `const` method, add `(const, override)` for the last parameter. 
-
-### Challenges with Complex Types
-
-Types with commas, such as `std::pair` or `std::map`, need to be either:
-
-- Wrapped in extra parentheses:
+Mock class templates work similarly:
 
 ```cpp
-MOCK_METHOD((std::pair<int, int>), GetPair, ());
-MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
-```
-
-- Or defined with type aliases for clarity and compiling ease:
-
-```cpp
-using Pair = std::pair<int, int>;
-MOCK_METHOD(Pair, GetPair, ());
-```
-
-### Visibility of Mock Methods
-
-Always place `MOCK_METHOD` declarations in the `public:` section of your mock class, even if the method is `protected` or `private` in the base class. This allows `ON_CALL` and `EXPECT_CALL` to access the mock methods externally.
-
-### Mocking Overloaded and Template Methods
-
-Simply provide a separate `MOCK_METHOD` declaration for each overload or use type aliases and templates as necessary. To avoid hiding other overloads, bring them into scope via `using BaseClass::MethodName;`.
-
-### Mocking Non-virtual Methods
-
-GoogleMock can mock non-virtual methods when used in dependency injection scenarios where your mock class is unrelated to the real class but shares the same method signatures.
-
-```cpp
-class MockPacketStream {
+template <typename Elem>
+class StackInterface {
  public:
-  MOCK_METHOD(const Packet*, GetPacket, (size_t packet_number), (const));
+  virtual ~StackInterface();
+  virtual int GetSize() const = 0;
+  virtual void Push(const Elem& x) = 0;
+};
+
+template <typename Elem>
+class MockStack : public StackInterface<Elem> {
+ public:
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(void, Push, (const Elem& x), (override));
 };
 ```
 
----
+### Mocking Overloaded Methods
 
-## Specifying Mock Behaviors: `ON_CALL` and `EXPECT_CALL`
-
-### `ON_CALL` — Setting Default Behavior
-
-Use `ON_CALL` to specify what the mock method should do when called, **without creating an expectation that it must be called**.
-
-```cpp
-ON_CALL(mock_foo, DoThis()).WillByDefault(Return(1));
-```
-
-- The parameter list is identical to `EXPECT_CALL`.
-- The `.WillByDefault()` clause is **mandatory** and specifies the behavior for calls not covered by `EXPECT_CALL`.
-
-### `EXPECT_CALL` — Setting Expectations
-
-Use `EXPECT_CALL` to specify how many times and in what manner a mock method is expected to be called.
-
-```cpp
-EXPECT_CALL(mock_foo, DoThis(5))
-    .Times(3)
-    .WillRepeatedly(Return(10));
-```
-
-- You can chain modifiers such as:
-  - `.With()` – match arguments as a tuple
-  - `.Times()` – specify call cardinality
-  - `.InSequence()` – specify partial or total ordering
-  - `.After()` – set prerequisites for call order
-  - `.WillOnce()` and `.WillRepeatedly()` – control the return or action behavior
-  - `.RetiresOnSaturation()` – retire expectation after it's fulfilled
-
-#### Cardinalities in `.Times()`
-
-Common cardinalities include:
-
-- `AnyNumber()` — any number of calls allowed
-- `AtLeast(n)` — at least `n` calls
-- `AtMost(n)` — at most `n` calls
-- `Between(m, n)` — between `m` and `n` inclusive
-- `Exactly(n)` or simply `n` — exactly `n` calls; `0` means disallow calls
-
-If you omit `.Times()`, GoogleMock infers it based on the presence/absence of `WillOnce` and `WillRepeatedly` clauses.
-
-### Matching Arguments
-
-Use argument matchers or specific values to specify what arguments are expected:
-
-```cpp
-EXPECT_CALL(mock_foo, DoThis(Ge(5), _));  // First arg >=5, second arg anything
-EXPECT_CALL(mock_foo, DoThat(_)).Times(0);  // Expect no calls
-```
-
-The wildcard matcher `_` can be used when you do not care about an argument's value.
-
-### Chaining Multiple Behaviors
-
-You can define a sequence of actions for calls via `WillOnce` chained multiple times, followed by an optional `WillRepeatedly`:
-
-```cpp
-EXPECT_CALL(mock_foo, GetValue())
-    .WillOnce(Return(1))
-    .WillOnce(Return(2))
-    .WillRepeatedly(Return(3));
-```
-
-Calls 1 and 2 return 1 and 2 respectively, all subsequent calls return 3.
-
-### Using `.With()` to Match Argument Tuples
-
-To impose constraints involving multiple arguments together, use `.With()` which receives a matcher of a tuple:
-
-```cpp
-EXPECT_CALL(mock, SetPosition(_, _)).With(Lt());
-// Expects first argument less than second
-```
-
----
-
-## Managing Uninteresting and Unexpected Calls
-
-### Mock Types Regarding Call Strictness
-
-GoogleMock provides three wrapper templates to control behavior on uninteresting calls.
-
-| Wrapper Template              | Description                                                                            |
-|------------------------------|----------------------------------------------------------------------------------------|
-| `NiceMock<T>`                | Suppresses warnings on uninteresting calls (calls without `EXPECT_CALL`).              |
-| `NaggyMock<T>` (default)    | Prints warnings on uninteresting calls.                                               |
-| `StrictMock<T>`               | Treats uninteresting calls as errors leading to test failures.                         |
-
-Example:
-
-```cpp
-NiceMock<MockFoo> nice_foo;
-EXPECT_CALL(nice_foo, DoThis());
-nice_foo.DoThis();  // No warning for other calls
-```
-
-These wrappers inherit the mocked class's constructors, so you can construct with any arguments just like the original mock.
-
-### Behavior Differences
-
-| Situation            | NiceMock             | NaggyMock           | StrictMock           |
-|----------------------|----------------------|---------------------|----------------------|
-| Uninteresting call   | Ignored silently     | Prints warning      | Fails test           |
-| Unexpected call      | Fails test           | Fails test          | Fails test           |
-
-### Practical Tips
-
-- Use `NiceMock` in most tests to reduce noise.
-- Use `StrictMock` when you want precise call monitoring, catching all unexpected interactions.
-- `NaggyMock` is useful during initial test development to notify about possible missing expectations.
-
----
-
-## Handling Non-default Constructible Types in Returns
-
-If your mock method returns a type without a default constructor, you **must** explicitly specify return values in expectations, otherwise an exception or test failure occurs when the method is called unexpectedly.
-
-```cpp
-EXPECT_CALL(mock_foo, ReturnNonDefaultConstructible())
-   .WillOnce(Return(MyTypeConstructor()));
-```
-
----
-
-## Additional Features and Best Practices
-
-### Setting Default Actions with `ON_CALL`
-
-Prefer `ON_CALL` for setting default behaviors shared across tests or for optional calls, while reserving `EXPECT_CALL` for calls whose presence and frequency you want to verify.
-
-### Avoid Over Specifying
-
-Only specify as many expectations and argument matchers as you need to express intent.
-
-### Order and Overriding of Expectations
-
-Expectations set later override earlier ones for the same method and arguments, reflecting the pattern of default behavior first, specific overrides later.
-
-### Mock Lifecycles
-
-Expectations are verified automatically when mock objects are destroyed. Use `Mock::AllowLeak()` if a mock must intentionally live beyond test's lifetime without verification.
-
-### Mocking Complex and Move-Only Types
-
-GoogleMock supports mocking methods with move-only types (`std::unique_ptr`) in arguments and returns directly via `MOCK_METHOD`.
-
-### Deleting Mock Objects in Actions
-
-You can safely delete a mock object from within an action.
-
-```cpp
-EXPECT_CALL(mock_foo, DoThis()).WillOnce(Delete(mock_foo_pointer));
-```
-
----
-
-## Code Examples
-
-### Creating a Basic Mock and Setting Expectations
+Mocking overloaded functions requires you to mock each overload explicitly:
 
 ```cpp
 class Foo {
  public:
-  virtual void DoThis() = 0;
-  virtual int DoThat(bool flag) = 0;
-  virtual ~Foo() = default;
+  virtual ~Foo();
+  virtual int Add(Element x);
+  virtual int Add(int times, Element x);
+  virtual Bar& GetBar();
+  virtual const Bar& GetBar() const;
 };
 
 class MockFoo : public Foo {
  public:
-  MOCK_METHOD(void, DoThis, (), (override));
-  MOCK_METHOD(int, DoThat, (bool flag), (override));
+  MOCK_METHOD(int, Add, (Element x), (override));
+  MOCK_METHOD(int, Add, (int times, Element x), (override));
+  MOCK_METHOD(Bar&, GetBar, (), (override));
+  MOCK_METHOD(const Bar&, GetBar, (), (const, override));
+};
+```
+
+Use `using Foo::Add;` inside the mock to avoid hiding unmocked overloads.
+
+### Mocking Non-Virtual Methods
+
+GoogleMock also supports mocking of non-virtual methods using the same `MOCK_METHOD` macro syntax but without the `override` qualifier:
+
+```cpp
+class ConcretePacketStream {
+ public:
+  void AppendPacket(Packet* new_packet);
+  const Packet* GetPacket(size_t packet_number) const;
+  size_t NumberOfPackets() const;
 };
 
-TEST(FooTest, Example) {
-  MockFoo mock;
-
-  ON_CALL(mock, DoThat(true))
-      .WillByDefault(Return(42));
-
-  EXPECT_CALL(mock, DoThis())
-      .Times(1);
-
-  mock.DoThis();  // OK
-  int val = mock.DoThat(true);  // Returns 42 by default
-  EXPECT_EQ(val, 42);
-}
+class MockPacketStream {
+ public:
+  MOCK_METHOD(const Packet*, GetPacket, (size_t packet_number), (const));
+  MOCK_METHOD(size_t, NumberOfPackets, (), (const));
+};
 ```
 
-### Using NiceMock
+This technique requires specifying mocks at compile-time.
+
+---
+
+## 2. Using Mocks in Tests
+
+The typical workflow:
+
+1. **Include gMock headers** and use the `testing` namespace or import needed symbols.
+2. **Create mock objects** of your mock classes.
+3. **Set default behaviors** with `ON_CALL`.
+4. **Set expectations** with `EXPECT_CALL` specifying how the mocks should be called.
+5. **Run the test code** that uses the mock objects.
+6. **Verify** that expectations are met, automatically done at mock destruction or manually.
+
+### Setting Default Actions: ON_CALL
 
 ```cpp
-NiceMock<MockFoo> nice_mock;
-EXPECT_CALL(nice_mock, DoThis());
-nice_mock.DoThis();
-// no warning on uninteresting calls
+ON_CALL(mock_object, Method(matchers))
+    .With(multi_argument_matcher)  // optional
+    .WillByDefault(action);        // required
 ```
 
-### Specifying Call Sequences
+`ON_CALL` specifies what happens when the mock method is called, but does not impose any expectation that the call will happen.
+
+### Setting Expectations: EXPECT_CALL
 
 ```cpp
-Sequence s;
-EXPECT_CALL(mock, DoThis()).InSequence(s);
-EXPECT_CALL(mock, DoThat(true)).InSequence(s);
-
-mock.DoThis();
-mock.DoThat(true);
+EXPECT_CALL(mock_object, Method(matchers))
+    .With(multi_argument_matcher)  // optional
+    .Times(cardinality)            // optional
+    .InSequence(sequences...)      // zero or more
+    .After(expectations...)        // zero or more
+    .WillOnce(action)              // zero or more
+    .WillRepeatedly(action)        // optional
+    .RetiresOnSaturation();        // optional
 ```
 
-### Retiring Expired Expectations
+`EXPECT_CALL` sets expectations on calls, specifying argument matchers, expected number of calls, sequencing, and behavior.
+
+#### Cardinalities (Times)
+
+Predefined cardinalities include
+
+- `Exactly(n)` or `n`
+- `AnyNumber()`
+- `AtLeast(n)`
+- `AtMost(n)`
+- `Between(m, n)`
+
+If omitted, GoogleMock infers the cardinality from the actions specified.
+
+#### Ordering
+
+- Use `.InSequence(...)` or `InSequence` object for strict call ordering.
+- Use `.After(...)` to specify that one expectation must happen after others.
+
+### Example
 
 ```cpp
-EXPECT_CALL(mock, DoThat(_))
-    .Times(2)
-    .RetiresOnSaturation();
+using ::testing::Return;
+using ::testing::_;
+
+MockFoo foo;
+
+ON_CALL(foo, GetSize())
+    .WillByDefault(Return(1));
+
+EXPECT_CALL(foo, Describe(5))
+    .Times(3)
+    .WillRepeatedly(Return("Category 5"));
+
+EXPECT_EQ(MyProductionFunction(&foo), "good");
 ```
 
-After two matching calls, this expectation will no longer match calls, allowing other expectations to take over.
+---
+
+## 3. Mock Behavior Control
+
+### NiceMock, NaggyMock, and StrictMock Wrappers
+
+These templates modify how uninteresting calls (calls to methods without matching expectations) are handled for a mock object:
+
+| Wrapper       | Uninteresting Call Behavior                             |
+|--------------|--------------------------------------------------------|
+| `NiceMock<T>` | Silences warnings on uninteresting calls (default: ignore) |
+| `NaggyMock<T>` | Prints warnings on uninteresting calls (default behavior)  |
+| `StrictMock<T>` | Treats uninteresting calls as test failures            |
+
+Example:
+
+```cpp
+NiceMock<MockFoo> nice_foo;      // Ignores uninteresting calls
+NaggyMock<MockFoo> naggy_foo;    // Warns on uninteresting calls
+StrictMock<MockFoo> strict_foo;  // Errors on uninteresting calls
+```
 
 ---
 
-For more detailed examples on argument matchers, actions, and sequences, see the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) and the [Mocking Reference](https://google.github.io/googletest/reference/mocking.html).
+## 4. Handling Mock Methods Returning Move-Only Types
+
+You can directly mock methods returning or accepting move-only types (e.g., `std::unique_ptr`) using `MOCK_METHOD`:
+
+```cpp
+MOCK_METHOD(std::unique_ptr<Buzz>, MakeBuzz, (StringPiece text), (override));
+```
+
+When returning move-only types from mocks, prefer specifying actions using lambdas or functions to produce new objects each call:
+
+```cpp
+EXPECT_CALL(mock_buzzer_, MakeBuzz("x"))
+    .WillRepeatedly([](StringPiece text) {
+      return std::make_unique<Buzz>(AccessLevel::kInternal);
+    });
+```
 
 ---
 
-## Troubleshooting and Common Pitfalls
+## 5. Best Practices and Common Pitfalls
 
-- **Uninteresting mock function call warnings:** Use `NiceMock` to suppress warnings if the calls are indeed expected to be unverified.
-
-- **Unexpected calls:** Occur when a call does not match any active `EXPECT_CALL` setup; ensure your expectations cover the intended calls.
-
-- **Mock method invocation order:** Use `InSequence` or `After` clauses to enforce call orders.
-
-- **Default return values:** For non-void return types without defaults, always provide explicit return actions to avoid run-time errors.
-
-- **Mock object lifetime:** If a mock lives beyond the test, call `Mock::AllowLeak` to avoid false leak reports.
+- **Set expectations before invoking mock methods.** Setting `EXPECT_CALL` after a mock method is called is undefined behavior.
+- **Avoid over-specification.** Use `ON_CALL` when you don’t want to enforce call counts or arguments.
+- **Use wildcards `_` matcher** for arguments you don't care about.
+- **Ordering matters in setting expectations:** newer `EXPECT_CALL`s override older ones.
+- **Retire expectations explicitly if needed:** to prevent them from matching calls after saturation, use `.RetiresOnSaturation()`.
+- **Use sequences or `.After()` for strict or partial ordering of calls.**
 
 ---
 
-For comprehensive understanding and additional recipes, review [gmock_for_dummies.md](https://google.github.io/googletest/gmock_for_dummies.html), [gmock_cheat_sheet.md](https://google.github.io/googletest/gmock_cheat_sheet.html), and [gmock_faq.md](https://google.github.io/googletest/gmock_faq.html).
+## 6. Advanced Usage
+
+### Using `DefaultValue<T>` to Change Default Return Values
+
+When no action is specified, GoogleMock returns default values for some types automatically. For user-defined types or custom behavior, you can change the default return values:
+
+```cpp
+::testing::DefaultValue<MyType>::Set(my_default_value);
+::testing::DefaultValue<MyType>::Clear();
+```
+
+### Using `MockFunction` for std::function Mocks
+
+You can mock a callback or std::function-like interface using `MockFunction`:
+
+```cpp
+MockFunction<int(std::string)> mock;
+EXPECT_CALL(mock, Call("bar")).WillOnce(Return(1));
+...
+foo(mock.AsStdFunction());
+```
+
+This lets you test code that takes `std::function` arguments.
 
 ---
+
+## 7. Troubleshooting Common Issues
+
+### Warning: Uninteresting Call
+
+When a mock method is called but no `EXPECT_CALL` matches and no `ON_CALL` default action is set, a warning is printed. If this is expected, suppress it by:
+
+- Using `NiceMock` wrapper
+- Adding a catch-all `EXPECT_CALL` with `Times(AnyNumber())`
+
+### Mocked Method Invokes Real Method
+
+Ensure the method is declared `virtual` in the base class. Non-virtual methods cannot be mocked.
+
+### Mock Failures on Call Count
+
+Try `--gmock_verbose=info` to see detailed call matching logs for diagnosing unexpected call counts.
+
+### Overloads Ambiguity
+
+Help the compiler by disambiguating overloaded methods using `Const()` or specifying matchers explicitly.
+
+### Mock Leak Errors
+
+GoogleMock verifies expectations at destruction. If mocks are leaked, expectations are not verified. Use `Mock::AllowLeak(&mock_obj)` if leaking is intentional.
+
+---
+
+For examples, techniques on delegating to real or fake objects, custom matchers and actions, refer to the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html).
+
+
+---
+
+## References & Further Reading
+
+- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
+- [Expectations and Default Actions](https://google.github.io/googletest/reference/mocking.html#EXPECT_CALL)
+- [Matchers Library](https://google.github.io/googletest/reference/matchers.html)
+- [Actions Reference](https://google.github.io/googletest/reference/actions.html)
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+- [Legacy gMock FAQ](https://google.github.io/googletest/gmock_faq.html)
+- [Using Mocks in Tests Guide](https://google.github.io/googletest/guides/getting-started/first-mock.html)
+
+<Source url="https://github.com/google/googletest" paths={[{"path": "docs/reference/mocking.md", "range": "1-230"}]} />
+
